# tidybot_ws

./: README.md
docs/: Approach.md
drift_tidybot/: package.xml
drift_tidybot/launch/: tidybot.launch.py
drift_tidybot/meshes/: camera_link.STL  left_arm_gripper_left_gear_link.STL  left_arm_gripper_left_link_link.STL  left_arm_gripper_right_finger_link.STL  left_arm_gripper_right_gear_link.STL  left_arm_gripper_rightt_gear_link.STL  left_arm_shoulder_link.STL  left_gripper_left_link.STL  left_wrist_link.STL  rear_right_wheel_link.STL  right_arm_gripper_left_gear_link.STL  right_arm_gripper_left_link_link.STL  right_arm_gripper_right_finger_link.STL  right_arm_gripper_right_link_link.STL  right_arm_link.STL  right_arm_shoulder_link.STL  right_arm_wrist_link.STL  robot_base_link.STL
drift_tidybot/scripts/: arm.py  camera.py
drift_tidybot/urdf/: robot.urdf
drift_tidybot/worlds/: tidybot_home.world
src/drift_tidybot/: CMakeLists.txt
src/drift_tidybot/config/: controllers.yaml
src/drift_tidybot/meshes/: base_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  head_link.STL  left_arm_elbow_link.STL  left_arm_gripper_base_link.STL  left_arm_gripper_left_finger_link.STL  left_arm_gripper_right_link_link.STL  left_arm_gripper_rightt_link_link.STL  left_arm_wrist_link.STL  left_elbow_link.STL  left_gripper_base_link.STL  left_gripper_left_finger_link.STL  left_gripper_left_gear_link.STL  left_gripper_right_finger_link.STL  left_gripper_right_gear_link.STL  left_gripper_right_link.STL  left_shoulder_link.STL  lidar_link.STL  rear_left_wheel_link.STL  (+4 more)
(+2 files in other folders)
