<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>drift_tidybot</name>
    <version>0.0.0</version>
    <description>Internship project for drift tidybot</description>
    <maintainer email="rishi17@umd.edu">Rishi</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclpy</depend>
    <depend>robot_state_publisher</depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <depend>cv_bridge</depend>
    <depend>gazebo_ros</depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/.." />
    </export>
</package>